@@ -15,6 +15,7 @@ Other features
 ~~~~~~~~~~~~~~
 
  * Added support for Python 3.7 (Matt Westcott)
+ * Added ``max_count`` option on page models to limit the number of pages of a particular type that can be created (Dan Braghis)
 
 
 Bug fixes
