@@ -1,0 +1,25 @@
+# Generated by Django 2.1.2 on 2018-10-27 10:18
+
+from django.db import migrations, models
+import django.db.models.deletion
+
+
+class Migration(migrations.Migration):
+
+    dependencies = [
+        ('wagtailcore', '0041_group_collection_permissions_verbose_name_plural'),
+        ('tests', '0037_customdocument_verbose_name_plural'),
+    ]
+
+    operations = [
+        migrations.CreateModel(
+            name='SingletonPageViaMaxCount',
+            fields=[
+                ('page_ptr', models.OneToOneField(auto_created=True, on_delete=django.db.models.deletion.CASCADE, parent_link=True, primary_key=True, serialize=False, to='wagtailcore.Page')),
+            ],
+            options={
+                'abstract': False,
+            },
+            bases=('wagtailcore.page',),
+        ),
+    ]
